# track_stock_back

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
goods_map/: asgi.py  settings.py  urls.py  wsgi.py
goods_map/goods/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
goods_map/goods/migrations/: 0001_initial.py  0002_goodsmodel_store_back_goodsmodel_store_hall_and_more.py
goods_map/stock/: admin.py  apps.py  models.py
goods_map/stock/migrations/: 0001_initial.py  0002_delete_stockmodel.py
